# Sahayak-AI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: default.yaml
demo/: .gitkeep  RECORDING_GUIDE.md  sample_email.txt
docs/: ARCHITECTURE.md  INTEL_STACK_RATIONALE.md  RESPONSIBLE_AI.md
models/: .gitkeep  download_models.py
scripts/: agent.py  agent_claude.py  agent_groq.py  bench_iris.py  demo_cursor.py  demo_cursor_mp.py  demo_full.py  demo_webcam.py  whisper_transcribe.py
src/sahaayak/: __init__.py  desktop_app.py  main.py
src/sahaayak/control/: __init__.py  action_dispatcher.py  cursor_controller.py  eye_keyboard.py
src/sahaayak/copilot/: __init__.py  doc_visualizer.py  email_simplifier.py  focus_nudger.py  llm_engine.py  meeting_summarizer.py
src/sahaayak/copilot/prompts/: __init__.py  email_simplify.txt  keyboard_predict.txt  meeting_summary.txt  mind_map.txt
src/sahaayak/core/: __init__.py  calibrator.py  eye_tracker.py  gaze_estimator.py  gesture_engine.py  kalman_filter.py  mediapipe_tracker.py
src/sahaayak/safety/: __init__.py  audit_log.py  confidence_gate.py  kill_switch.py
src/sahaayak/ui/: __init__.py  calibration_window.py  consent_dialog.py  copilot_panel.py  overlay.py  rest_reminder.py
src/sahaayak/utils/: __init__.py  benchmark.py  config.py  i18n.py  intel_device.py  logger.py
tests/: test_audit_log.py  test_benchmark.py  test_calibrator.py  test_confidence_gate.py  test_config.py  test_email_simplifier.py  test_eye_keyboard.py  test_eye_tracker.py  test_focus_nudger.py  test_gesture_engine.py  test_intel_device.py  test_kalman_filter.py  test_llm_engine.py  test_logger.py  test_main.py  test_mediapipe_tracker.py
tests/fixtures/: .gitkeep
